style: fix autofill overlapping

--- a/packages/cashier/src/components/cashier-search-box/cashier-search-box.scss
+++ b/packages/cashier/src/components/cashier-search-box/cashier-search-box.scss
@@ -4,6 +4,7 @@
     .dc-input {
         margin-bottom: 0;
         height: 3.2rem;
+        overflow: hidden;
         &__field {
             padding: 0.6rem 3.2rem;
             height: 3.2rem;
